--- a/index.html
+++ b/index.html
@@ -5,13 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Página</title>
+
+    <!-- BOOTSTRAP -->
+    <link rel="stylesheet" href="#">
+
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="css/main.css">
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+    <!-- SCRIPT NAVBAR -->
+    <script src="script.js" defer></script>
+
+    <title>Taller Schumann</title>
 </head>
 
 
 
 
 <body>
-    
+    <nav class="navbar">
+        <div class="brand-title">
+            <img src="public/img/logo-schu-blanco-mini.png" alt="">
+        </div>
+
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+
+        <div class="navbar-links">
+            <ul>
+                <li>
+                    <a href="#">Inicio</a>
+                </li>
+                <li>
+                    <a href="#">Novedades</a>
+                </li>
+                <li>
+                    <a href="#">Nosotros</a>
+                </li>
+                <li>
+                    <a href="#">Servicios</a>
+                </li>
+                <li>
+                    <a href="#">Contacto</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
