--- a/index.html
+++ b/index.html
@@ -58,5 +58,16 @@
             </ul>
         </div>
     </nav>
+
+    <main>
+        <div class="titular">
+            <h1>
+                Despertando el sentimiento musical
+            </h1>
+        </div>
+        <div class="logo-grande">
+            <img src="public/img/logo-schu-blanco.png" alt="">
+        </div>
+    </main>
 </body>
 </html>
