--- a/index.html
+++ b/index.html
@@ -69,5 +69,26 @@
             <img src="public/img/logo-schu-blanco.png" alt="">
         </div>
     </main>
+
+    <footer>
+        <div>
+            <p>
+                Copyright 2021 - MEMDev - Todos los derechos reservados
+            </p>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    <a href="#">Whatsapp</a>
+                </li>
+                <li>
+                    <a href="#">Facebook</a>
+                </li>
+                <li>
+                    <a href="#">Instagram</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
