agregado hasta pagina novedades

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <!-- SCRIPT NAVBAR -->
     <script src="script.js" defer></script>
 
-    <title>Taller Schumann</title>
+    <title>Inicio | Taller Schumann</title>
 </head>
 
 
 
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <nav class="navbar">
         <div class="brand-title">
             <img src="public/img/logo-schu-blanco-mini.png" alt="">
@@ -41,13 +41,13 @@
         <div class="navbar-links">
             <ul>
                 <li>
-                    <a href="#">Inicio</a>
+                    <a href="index.html">Inicio</a>
                 </li>
                 <li>
-                    <a href="#">Novedades</a>
+                    <a href="pages/novedades.html">Novedades</a>
                 </li>
                 <li>
-                    <a href="#">Nosotros</a>
+                    <a href="pages/nosotros.html">Nosotros</a>
                 </li>
                 <li>
                     <a href="#">Servicios</a>
@@ -59,7 +59,7 @@
         </div>
     </nav>
 
-    <main>
+    <main class="home-main">
         <div class="titular">
             <h1>
                 Despertando el sentimiento musical
@@ -70,7 +70,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer class="mt-auto">
         <div>
             <p>
                 Copyright 2021 - MEMDev - Todos los derechos reservados
