--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -20,7 +20,7 @@
     <!-- SCRIPT NAVBAR -->
     <script src="../script.js" defer></script>
 
-    <title>Taller Schumann</title>
+    <title>Quiénes Somos | Taller Schuman</title>
 </head>
 
 <body>
@@ -44,21 +44,89 @@
                     <a href="novedades.html">Novedades</a>
                 </li>
                 <li>
-                    <a href="#">Nosotros</a>
+                    <a href="nosotros.html">Nosotros</a>
                 </li>
                 <li>
-                    <a href="#">Servicios</a>
+                    <a href="servicios.html">Servicios</a>
                 </li>
                 <li>
-                    <a href="#">Contacto</a>
+                    <a href="contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    
+    <main class="seccion-about container my-5 d-grid gap-5">
+        <div class="titular-about">
+            <h1 class="text-center">
+                Quiénes somos
+            </h1>
+        </div>
+        <div class="parrafo-about p-5 border">
+            <p>
+                El Taller Schumann es una institución de enseñanza musical creada en 1989 en la ciudad de Salto, Buenos Aires.
+            </p>
+            <p>
+                Es dirigido desde sus inicios y hasta la actualidad por la profesora Daniela Basilico, egresada del Conservatorio Nacional de Música Carlos López Buchardo, e integrante del Foro Latinoamericano de Educadores Musicales (FLADEM), y galardonada en el 2014 por la Municipalidad de Salto como Ciudadana Distinguida, al cumplirse los 25 años del Taller Schumann como institución.
+            </p>
+            <p>
+                Desde su origen, el Taller se encuentra comprometido con el servicio de la enseñanza musical a través del piano, no solo como un simple instrumento, sino también como un punto de encuentro colectivo, donde mediante la música se intenta estimular la expresión más profunda del sentir humano.
+            </p>
+        </div>
 
+        <div class="p-5 border">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../public/img/car6.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../public/img/car4.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../public/img/car2.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../public/img/car3.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../public/img/car7.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
 
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+    </main>
+
+    <footer class="mt-auto">
+        <div>
+            <p>
+                Copyright 2021 - MEMDev - Todos los derechos reservados
+            </p>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    <a href="#">Whatsapp</a>
+                </li>
+                <li>
+                    <a href="#">Facebook</a>
+                </li>
+                <li>
+                    <a href="#">Instagram</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 
