--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                     <a href="pages/nosotros.html">Nosotros</a>
                 </li>
                 <li>
-                    <a href="#">Servicios</a>
+                    <a href="pages/servicios.html">Servicios</a>
                 </li>
                 <li>
-                    <a href="#">Contacto</a>
+                    <a href="pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
