--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -20,7 +20,7 @@
     <!-- SCRIPT NAVBAR -->
     <script src="../script.js" defer></script>
 
-    <title>Sobre Nosotros | Taller Schumann</title>
+    <title>Novedades | Taller Schumann</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -47,10 +47,10 @@
                     <a href="nosotros.html">Nosotros</a>
                 </li>
                 <li>
-                    <a href="#">Servicios</a>
+                    <a href="servicios.html">Servicios</a>
                 </li>
                 <li>
-                    <a href="#">Contacto</a>
+                    <a href="contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
