--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -20,7 +20,7 @@
     <!-- SCRIPT NAVBAR -->
     <script src="../script.js" defer></script>
 
-    <title>Taller Schumann</title>
+    <title>Qué hacemos | Taller Schuman</title>
 </head>
 
 <body>
@@ -44,21 +44,95 @@
                     <a href="novedades.html">Novedades</a>
                 </li>
                 <li>
-                    <a href="#">Nosotros</a>
+                    <a href="nosotros.html">Nosotros</a>
                 </li>
                 <li>
-                    <a href="#">Servicios</a>
+                    <a href="servicios.html">Servicios</a>
                 </li>
                 <li>
-                    <a href="#">Contacto</a>
+                    <a href="contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    
 
+    <main class="main-servicios">
+        <div>
+            <div class="encabezado">
+                <h1>
+                    Qué hacemos
+                </h1>
+            </div>
+            <div class="texto-info">
+                <p>
+                    El Taller se enorgullece en estar equipado con todo lo necesario para que desarrolles tu aprendizaje musical con lo mejor. Ponemos a disposición todo para que lleves tu conocimiento y destreza musical al siguiente nivel.
+                </p>
+            </div>
+        </div>
+        <section class="container-fluid p-5">
+            <div class="row">
+                <div class="col-md">
+                    <h3 class="titular-serv text-center">
+                        Clases individuales
+                    </h3>
+                    <p class="texto-serv">
+                        Seguimiento y horario personalizado. Material de estudio y biblioteca virtual.
+                    </p>
+                    <div>
+                        <img src="../public/img/car4.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="col-md">
+                    <h3 class="titular-serv text-center">
+                        Clases grupales
+                    </h3>
+                    <p class="texto-serv">
+                        Teoría musical e instrumentación para grupos a partir de 10 años de edad.
+                    </p>
+                    <img src="../public/img/car2.png" class="img-fluid" alt="">
+                </div>
+                <div class="col-md">
+                    <h3 class="titular-serv text-center">
+                        Modalidad virtual disponible
+                    </h3>
+                    <p class="texto-serv">
+                        Desde donde te encuentres y cuando quieras. Contamos también con clases por Zoom.
+                    </p>
+                    <img src="../public/img/car5-1.png" class="img-fluid" alt="">
+                </div>
+            </div>
+        </section>
 
+        <div class="llamado">
+            <h1>
+                <a href="contacto.html">¡Consultanos!</a>
+            </h1>
+        </div>
+    </main>
+
+    <footer class="mt-auto">
+        <div>
+            <p>
+                Copyright 2021 - MEMDev - Todos los derechos reservados
+            </p>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    <a href="#">Whatsapp</a>
+                </li>
+                <li>
+                    <a href="#">Facebook</a>
+                </li>
+                <li>
+                    <a href="#">Instagram</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 
