--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300&display=swap" rel="stylesheet">
 
-    <!-- SCRIPT NAVBAR -->
-    <script src="script.js" defer></script>
-
     <title>Inicio | Taller Schumann</title>
 </head>
 
@@ -27,40 +24,49 @@
 
 
 <body class="d-flex flex-column min-vh-100">
-    <nav class="navbar">
-        <div class="brand-title">
-            <img src="public/img/logo-schu-blanco-mini.png" alt="">
-        </div>
+    
+    <nav class="navbar navbar-expand-lg navbar-dark p-md-3">
+        <div class="container">
+            <a class="navbar-brand" href="#"><img src="public/img/logo-schu-blanco-mini.png" alt=""></a>
 
-        <a href="#" class="toggle-button">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </a>
+        <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
 
-        <div class="navbar-links">
-            <ul>
-                <li>
-                    <a href="index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="pages/novedades.html">Novedades</a>
-                </li>
-                <li>
-                    <a href="pages/nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="pages/servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="pages/contacto.html">Contacto</a>
-                </li>
-            </ul>
+            <span class="navbar-toggler-icon"></span>
+
+        </button>
+
+        <div class="barra collapse navbar-collapse" id="navbarNav">
+            <div class="mx-auto"></div>
+                <ul class="barra-nav navbar-nav">
+                    <li class="item-barra nav-item">
+                        <a class="nav-link text-white link-tincho" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white link-tincho" href="pages/nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white link-tincho" href="pages/novedades.html">Novedades</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white link-tincho" href="pages/servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white link-tincho" href="pages/contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
     <main class="home-main">
-        <div class="titular">
+        <div class="titular m-3">
             <h1>
                 Despertando el sentimiento musical
             </h1>
@@ -73,7 +79,7 @@
     <footer class="mt-auto">
         <div>
             <p>
-                Copyright 2021 - MEMDev - Todos los derechos reservados
+                / © MEMDev 2021 \
             </p>
         </div>
         <div>
