--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Meta tags -->
+    <meta name="keywords" content="piano, clases, online, musica, presencial, salto, buenos aires, argentina">
+
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
