--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300&display=swap" rel="stylesheet">
 
 
-    <title>Quiénes Somos | Taller Schuman</title>
+    <title>Quiénes Somos | Taller Schumann</title>
 </head>
 
 <body>
