--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300&display=swap" rel="stylesheet">
 
-    <title>Qué hacemos | Taller Schuman</title>
+    <title>Qué hacemos | Taller Schumann</title>
 </head>
 
 <body>
