--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
 
     <!-- Meta tags -->
     <meta name="keywords" content="piano, clases, online, musica, presencial, salto, buenos aires, argentina">
+    <meta name="description" content="¡Contactate con nosotros!">
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
