--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -7,6 +7,7 @@
 
     <!-- Meta tags -->
     <meta name="keywords" content="piano, clases, online, musica, presencial, salto, buenos aires, argentina">
+    <meta name="description" content="Estate al tanto de las novedades del Taller.">
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
