--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -7,6 +7,7 @@
 
     <!-- Meta tags -->
     <meta name="keywords" content="piano, clases, online, musica, presencial, salto, buenos aires, argentina">
+    <meta name="description" content="Más de 30 años de trayectoria en la enseñanza musical.">
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
