--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../public/img/favicon/favicon-16x16.png" type="image/x-icon">
 
     <title>Quiénes Somos | Taller Schumann</title>
 </head>
