agregados algunos comentarios en todos los html

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="../public/img/logo-schu-blanco-mini.png" alt=""></a>
@@ -67,7 +68,7 @@
         </div>
     </nav>
 
-
+    <!-- CONTENIDO PRINCIPAL -->
     <main class="main-servicios">
         <div>
             <div class="encabezado">
@@ -125,6 +126,7 @@
         </div>
     </main>
 
+    <!-- FOOTER -->
     <footer class="mt-auto">
         <div>
             <p>
