--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 
-
+<!-- NAVBAR -->
 <body class="d-flex flex-column min-vh-100">
     
     <nav class="navbar navbar-expand-lg navbar-dark p-md-3">
@@ -73,6 +73,7 @@
         </div>
     </nav>
 
+    <!-- TITULARES HOME -->
     <main class="home-main">
         <div class="titular m-3">
             <h1>
@@ -84,6 +85,8 @@
         </div>
     </main>
 
+
+<!-- FOOTER -->
     <footer class="mt-auto">
         <div>
             <p>
