--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,6 +27,8 @@
 </head>
 
 <body>
+
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="../public/img/logo-schu-blanco-mini.png" alt=""></a>
@@ -67,6 +69,7 @@
         </div>
     </nav>
 
+    <!-- CONTENIDO PRINCIPAL -->
     <main class="formulario-contacto">
         <div class="titular-contacto">
             <h1>
@@ -109,6 +112,7 @@
         </div>
     </main>
 
+    <!-- FOOTER -->
     <footer class="mt-auto">
         <div>
             <p>
