--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -27,6 +27,8 @@
 </head>
 
 <body>
+
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="../public/img/logo-schu-blanco-mini.png" alt=""></a>
@@ -67,6 +69,8 @@
         </div>
     </nav>
 
+
+    <!-- SECCIÓN PRINCIPAL -->
     <main class="seccion-about container my-5 d-grid gap-5">
         <div class="titular-about">
             <h1 class="text-center">
@@ -85,6 +89,7 @@
             </p>
         </div>
 
+        <!-- CARRUSEL DE FOTOS BOOTSTRAP -->
         <div class="p-5 border">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -116,6 +121,7 @@
             </div>
     </main>
 
+    <!-- FOOTER -->
     <footer class="mt-auto">
         <div>
             <p>
