--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -27,6 +27,8 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
+
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="../public/img/logo-schu-blanco-mini.png" alt=""></a>
@@ -67,6 +69,7 @@
         </div>
     </nav>
 
+    <!-- CONTENIDO PRINCIPAL -->
     <main class="nov-main">
         <div class="titular">
             <h1>
@@ -74,6 +77,7 @@
             </h1>
         </div>
 
+        <!-- CONTENEDORES ARTÍCULOS -->
         <div class="articulos container my-5 d-grid gap-5">
             <div class="p-5 border">
                 <h1 class="titulo-art">
@@ -103,6 +107,8 @@
             </div>
         </div>
 
+
+        <!-- FOOTER -->
         <footer class="mt-auto">
             <div>
                 <p>
