corregidos alt tags y lang tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,7 +35,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="public/img/logo-schu-blanco-mini.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="public/img/logo-schu-blanco-mini.png" alt="taller-schumann"></a>
 
         <button
             class="navbar-toggler"
@@ -81,7 +81,7 @@
             </h1>
         </div>
         <div class="logo-grande">
-            <img src="public/img/logo-schu-blanco.png" alt="">
+            <img src="public/img/logo-schu-blanco.png" alt="taller-schumann">
         </div>
     </main>
 
