--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -94,19 +94,19 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../public/img/car6.png" class="d-block w-100" alt="...">
+                        <img src="../public/img/car6.png" class="d-block w-100" alt="taller-schumann-hall">
                     </div>
                     <div class="carousel-item">
-                        <img src="../public/img/car4.png" class="d-block w-100" alt="...">
+                        <img src="../public/img/car4.png" class="d-block w-100" alt="taller-schumann-piano">
                     </div>
                     <div class="carousel-item">
-                        <img src="../public/img/car2.png" class="d-block w-100" alt="...">
+                        <img src="../public/img/car2.png" class="d-block w-100" alt="taller-schumann-grupo">
                     </div>
                     <div class="carousel-item">
-                        <img src="../public/img/car3.png" class="d-block w-100" alt="...">
+                        <img src="../public/img/car3.png" class="d-block w-100" alt="taller-schumann-grupo">
                     </div>
                     <div class="carousel-item">
-                        <img src="../public/img/car7.png" class="d-block w-100" alt="...">
+                        <img src="../public/img/car7.png" class="d-block w-100" alt="schumann-alumnos-cck">
                     </div>
                 </div>
 
