--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -31,7 +31,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="../public/img/logo-schu-blanco-mini.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="../public/img/logo-schu-blanco-mini.png" alt="taller-schumann"></a>
 
         <button
             class="navbar-toggler"
