--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,7 +30,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="../public/img/logo-schu-blanco-mini.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="../public/img/logo-schu-blanco-mini.png" alt="taller-schumann"></a>
 
         <button
             class="navbar-toggler"
@@ -95,7 +95,7 @@
                         Seguimiento y horario personalizado. Material de estudio y biblioteca virtual.
                     </p>
                     <div>
-                        <img src="../public/img/car4.png" class="img-fluid" alt="">
+                        <img src="../public/img/car4.png" class="img-fluid" alt="schumann-individual">
                     </div>
                 </div>
                 <div class="col-md">
@@ -105,7 +105,7 @@
                     <p class="texto-serv">
                         Teoría musical e instrumentación para grupos a partir de 10 años de edad.
                     </p>
-                    <img src="../public/img/car2.png" class="img-fluid" alt="">
+                    <img src="../public/img/car2.png" class="img-fluid" alt="schumann-clase-grupal">
                 </div>
                 <div class="col-md">
                     <h3 class="titular-serv text-center">
@@ -114,7 +114,7 @@
                     <p class="texto-serv">
                         Desde donde te encuentres y cuando quieras. Contamos también con clases por Zoom.
                     </p>
-                    <img src="../public/img/car5-1.png" class="img-fluid" alt="">
+                    <img src="../public/img/car5-1.png" class="img-fluid" alt="schumann-clase-virtual">
                 </div>
             </div>
         </section>
