se sacaron los bordes blancos en algunas secciones

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -77,7 +77,7 @@
                 Quiénes somos
             </h1>
         </div>
-        <div class="parrafo-about p-5 border">
+        <div class="parrafo-about p-5">
             <p>
                 El Taller Schumann es una institución de enseñanza musical creada en 1989 en la ciudad de Salto, Buenos Aires.
             </p>
@@ -90,7 +90,7 @@
         </div>
 
         <!-- CARRUSEL DE FOTOS BOOTSTRAP -->
-        <div class="p-5 border">
+        <div class="p-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
