--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -79,7 +79,7 @@
 
         <!-- CONTENEDORES ARTÍCULOS -->
         <div class="articulos container my-5 d-grid gap-5">
-            <div class="p-5 border">
+            <div class="p-5">
                 <h1 class="titulo-art">
                     Noticia de ejemplo.
                 </h1>
@@ -88,7 +88,7 @@
                 </p>
             </div>
     
-            <div class="p-5 border">
+            <div class="p-5">
                 <h1 class="titulo-art">
                     Otra novedad.
                 </h1>
@@ -97,7 +97,7 @@
                 </p>
             </div>
     
-            <div class="p-5 border">
+            <div class="p-5">
                 <h1 class="titulo-art">
                     Noticia.
                 </h1>
