--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -76,7 +76,7 @@
                     Qué hacemos
                 </h1>
             </div>
-            <div class="texto-info">
+            <div class="texto-info m-5">
                 <p>
                     El Taller se enorgullece en estar equipado con todo lo necesario para que desarrolles tu aprendizaje con lo mejor. Ponemos a disposición todo para que lleves tu conocimiento y destreza musical al siguiente nivel.
                 </p>
