--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -77,7 +77,7 @@
             </h1>
         </div>
         <div class="fuente-form container my-5 d-grid gap-5 text-white">
-            <div class="p-5 border">
+            <div class="p-5">
                 <form class="row g-3" action="">
                     <div class="col-md-6">
                         <label for="firstName" class="form-label">
