prueba de modificacion de la seccion de novedades

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -79,19 +79,31 @@
 
         <!-- CONTENEDORES ARTÍCULOS -->
         <div class="articulos container my-5 d-grid gap-5">
-            <div class="p-5">
+            <div class="row p-5">
                 <h1 class="titulo-art">
-                    Noticia de ejemplo.
+                    Grupo de jóvenes, Cierre de fin de año 2021
                 </h1>
-                <p class="cuerpo-art">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo in, blanditiis vitae incidunt atque, dolore totam saepe voluptate mollitia impedit sapiente dicta aspernatur tenetur itaque quia labore hic expedita? Possimus enim consectetur ratione cum qui, earum dolorem a dolorum sequi aperiam quasi dignissimos magnam aut ea id animi inventore. Ipsam corporis enim libero repellendus, tempora porro veniam itaque at consequatur recusandae quae. Accusamus officia fugit optio incidunt doloribus enim libero beatae? Rerum numquam obcaecati a velit aliquam, at neque deserunt illo, aspernatur, qui expedita totam perspiciatis quia. Excepturi eaque iste minima cumque enim. Reprehenderit expedita quod quibusdam ullam incidunt molestiae.
-                </p>
+                <div class="col-md">
+                    <p class="cuerpo-art">
+                        (04/12/21)
+                    </p>
+                    <p>
+                        Se realizó el cierre de año. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, magnam architecto libero dolorum veniam magni pariatur? Totam pariatur quo ad rerum ut minima repellendus in aliquam quasi optio enim, at porro. Eveniet minus, adipisci in tempora architecto quibusdam earum facilis eos perferendis unde dignissimos sunt corporis sit ullam magnam sint, natus aliquam nostrum voluptatibus nobis. Ea, nulla dicta. Dolorem officiis numquam vitae doloribus molestias id quidem animi tempora ullam earum, molestiae repellendus itaque iure odio quod optio vero ex deleniti dolorum cum. Maiores sapiente corrupti recusandae quod! Non commodi, dolorum quae eos mollitia quidem! Minus rem ipsa dolores voluptates eveniet, soluta eaque praesentium doloribus sapiente porro itaque quasi sequi dignissimos repellat consequuntur molestiae voluptatibus possimus eligendi impedit ut, maxime distinctio? Minima neque quaerat odio cupiditate sequi reiciendis aut eaque laboriosam deleniti aliquam, corporis vitae impedit laborum incidunt accusantium, quod consequatur? Laudantium veniam officia ipsam, dolore eligendi, incidunt dolorum, architecto labore nesciunt in inventore quae qui? Ipsum iusto earum aliquam, cupiditate ipsa sed in mollitia accusantium maiores, praesentium perspiciatis autem ducimus? Libero in ullam optio provident tempora esse nihil officiis perferendis, sit iusto perspiciatis eligendi amet neque quos ratione illo, nam vero omnis reprehenderit excepturi maiores molestias nemo dicta ab! Eaque quisquam doloremque ea qui maxime, dolorem unde ad obcaecati exercitationem explicabo. Obcaecati fugit eligendi modi et incidunt doloremque, ab accusantium. Saepe deleniti, aperiam nostrum porro eius, repellat ullam obcaecati ut earum, tempore accusamus error rem eum deserunt incidunt? Ea, labore illum! Rerum, assumenda quaerat? Explicabo asperiores officia a ratione quasi accusamus architecto tenetur, inventore illo quibusdam omnis enim eligendi voluptatum dolore, nostrum molestiae eos est tempora ea maiores veritatis. Minus saepe ducimus praesentium odit dolor vitae nostrum quam voluptatum? Facilis possimus cum officiis eos autem amet vel illo quae tempora, vero, recusandae fugiat inventore enim soluta nostrum, voluptates quo aperiam et? Ipsa enim impedit ratione quia, nobis maiores. Minus, doloribus alias impedit magnam quis exercitationem harum maiores tempora assumenda, corporis beatae. Eveniet quis reprehenderit vel quidem. Laudantium aut molestias incidunt id maxime harum quae, iste eos repellat voluptatum sapiente, perferendis commodi exercitationem atque dolore doloremque dicta minus veritatis hic doloribus saepe odit rerum repellendus quo. Iure laudantium qui exercitationem sint enim, quos quibusdam accusantium debitis aut dolores placeat voluptatibus. Vero quibusdam similique ipsa provident beatae ad? Reiciendis consequuntur facere in molestiae vitae iste dolores quod ipsa enim, similique suscipit sequi error eos dolor atque illo. Tempore cum quas molestias neque?
+                    </p>
+                </div>
+                <div class="col-md">
+                    <img class="img-fluid" src="../public/img/car5-1.png" alt="">
+                </div>
+                
             </div>
     
             <div class="p-5">
                 <h1 class="titulo-art">
-                    Otra novedad.
+                    grupo de adultos, cierre de fin de año 2021.
                 </h1>
+                <p>
+                    (30/11/21)
+                </p>
                 <p class="cuerpo-art">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum expedita deleniti nam quisquam quam adipisci aliquam voluptate. Praesentium, ex voluptas saepe dolorum dicta at? Beatae alias rem, aliquid aliquam nam voluptate odio ipsa dolores id optio ad exercitationem fugit, ea expedita. Ducimus atque explicabo, adipisci repellendus reiciendis ipsam nemo eligendi eos quidem sed cumque aut quam, eius doloribus error natus sit repudiandae impedit? Deserunt sunt vel, deleniti asperiores reprehenderit quia non aperiam modi ipsum saepe labore assumenda rem est maxime. Nam maiores enim pariatur? Modi sit quaerat quae porro vel repudiandae expedita sequi quisquam labore. Odio, itaque ea saepe nihil obcaecati, nobis quam dolores aperiam non porro doloribus blanditiis doloremque suscipit culpa odit. Eius suscipit nihil, quod similique ratione sint?
                 </p>
