editada seccion novedades. correcciones minimas

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -31,7 +31,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="../public/img/logo-schu-blanco-mini.png" alt=""></a>
+            <a class="navbar-brand" href="../index.html"><img src="../public/img/logo-schu-blanco-mini.png" alt=""></a>
 
         <button
             class="navbar-toggler"
@@ -107,6 +107,9 @@
                     </div>
                     <div class="carousel-item">
                         <img src="../public/img/car7.png" class="d-block w-100" alt="schumann-alumnos-cck">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../public/img/car8.png" class="d-block w-100" alt="schumann-jornada">
                     </div>
                 </div>
 
