--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="public/img/logo-schu-blanco-mini.png" alt="taller-schumann"></a>
+            <a class="navbar-brand" href="index.html"><img src="public/img/logo-schu-blanco-mini.png" alt="taller-schumann"></a>
 
         <button
             class="navbar-toggler"
