--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,7 +31,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark p-md-3">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="../public/img/logo-schu-blanco-mini.png" alt="taller-schumann"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../public/img/logo-schu-blanco-mini.png" alt="taller-schumann"></a>
 
         <button
             class="navbar-toggler"
