--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -92,27 +92,57 @@
             </p>
         </div>
 
+        <div class="titular-about">
+            <h2 class=" text-center">
+                Momentos Schumann
+            </h2>
+        </div>
+
         <!-- CARRUSEL DE FOTOS BOOTSTRAP -->
-        <div class="p-5">
+        <div class="p-1">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="../public/img/car6.png" class="d-block w-100" alt="taller-schumann-hall">
+                        <div class="carousel-caption d-none d-md-block caption-foto-car">
+                            <h5>Hall del taller</h5>
+                            <p>Nuestro hall de entrada recientemente refaccionado.</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../public/img/car4.png" class="d-block w-100" alt="taller-schumann-piano">
+                        <div class="carousel-caption d-none d-md-block caption-foto-car">
+                            <h5>Sala principal</h5>
+                            <p>Nuestro punto de encuentro central: el piano.</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../public/img/car2.png" class="d-block w-100" alt="taller-schumann-grupo">
+                        <div class="carousel-caption d-none d-md-block caption-foto-car">
+                            <h5>Clase de grupo</h5>
+                            <p>Aprendemos, jugamos, experimentamos... Juntos.</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../public/img/car3.png" class="d-block w-100" alt="taller-schumann-grupo">
+                        <div class="carousel-caption d-none d-md-block caption-foto-car">
+                            <h5>Amigos del taller</h5>
+                            <p>¡Compartimos momentos dentro y fuera del Taller!</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../public/img/car7.png" class="d-block w-100" alt="schumann-alumnos-cck">
+                        <div class="carousel-caption d-none d-md-block caption-foto-car">
+                            <h5>Centro Cultural Kirchner</h5>
+                            <p>¡Nos lanzamos a la aventura!</p>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img src="../public/img/car8.png" class="d-block w-100" alt="schumann-jornada">
+                        <div class="carousel-caption d-none d-md-block caption-foto-car">
+                            <h5>Jornadas de capacitación</h5>
+                            <p>¡Siempre abiertos a lo nuevo!</p>
+                        </div>
                     </div>
                 </div>
 
