--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -94,8 +94,8 @@
                     <h3 class="titular-serv text-center">
                         Clases individuales
                     </h3>
-                    <p class="texto-serv">
-                        Seguimiento y horario personalizado. Material de estudio y biblioteca virtual.
+                    <p class="texto-serv text-center">
+                        Seguimiento, horario y material personalizado.
                     </p>
                     <div>
                         <img src="../public/img/car4.png" class="img-fluid" alt="schumann-individual">
@@ -105,7 +105,7 @@
                     <h3 class="titular-serv text-center">
                         Clases grupales
                     </h3>
-                    <p class="texto-serv">
+                    <p class="texto-serv text-center">
                         Teoría musical e instrumentación para grupos a partir de 10 años de edad.
                     </p>
                     <img src="../public/img/car2.png" class="img-fluid" alt="schumann-clase-grupal">
@@ -114,8 +114,8 @@
                     <h3 class="titular-serv text-center">
                         Modalidad virtual disponible
                     </h3>
-                    <p class="texto-serv">
-                        Desde donde te encuentres y cuando quieras. Contamos también con clases por Zoom.
+                    <p class="texto-serv text-center">
+                        Desde donde te encuentres y cuando quieras. Clases por Zoom.
                     </p>
                     <img src="../public/img/car5-1.png" class="img-fluid" alt="schumann-clase-virtual">
                 </div>
