--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -118,8 +118,12 @@
             <a href="https://wa.me/542474687023" style="display: table; font-family: sans-serif; text-decoration: none; margin: 1em auto; color: #fff; font-size: 0.9em; padding: 1em 2em 1em 3.5em; border-radius: 2em; font-weight: bold; background: #25d366 url('https://tochat.be/click-to-chat-directory/css/whatsapp.svg') no-repeat 1.5em center; background-size: 1.6em;">Contacto con WhatsApp</a>
         </div>
 
-        <div class="container text-center img-fluid p-3">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13185.133361363236!2d-60.2484115!3d-34.2923229!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8cc2b28089273ec5!2sTaller%20Musical%20Schumann!5e0!3m2!1ses-419!2sar!4v1638903923038!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="mapa-desktop">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13185.133361363236!2d-60.2484115!3d-34.2923229!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8cc2b28089273ec5!2sTaller%20Musical%20Schumann!5e0!3m2!1ses-419!2sar!4v1638903923038!5m2!1ses-419!2sar" width="800" height="650" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+
+        <div class="mapa-mobile">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13185.133361363236!2d-60.2484115!3d-34.2923229!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8cc2b28089273ec5!2sTaller%20Musical%20Schumann!5e0!3m2!1ses-419!2sar!4v1638903923038!5m2!1ses-419!2sar" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </main>
 
