modificaciones esteticas. imagenes redimensionadas, texto justificado.

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -88,6 +88,9 @@
                 Es dirigido desde sus inicios y hasta la actualidad por la profesora Daniela Basilico, egresada del Conservatorio Nacional de Música Carlos López Buchardo, e integrante del Foro Latinoamericano de Educadores Musicales (FLADEM), y galardonada en el 2014 por la Municipalidad de Salto como Ciudadana Distinguida, al cumplirse los 25 años del Taller Schumann como institución.
             </p>
             <p>
+                El Taller se caracteriza entre otras cosas por un proceso de constante mejora e innovación en las metodologías de enseñanza musical, apostando siempre a incorporar didácticas innovadoras, pensadas para estimular la creatividad, la curiosidad, el juego y el amor hacia la música como un medio de expresión liberador.
+            </p>
+            <p>
                 Desde su origen, el Taller se encuentra comprometido con el servicio de la enseñanza musical a través del piano, no solo como un simple instrumento, sino también como un punto de encuentro colectivo, donde mediante la música se intenta estimular la expresión más profunda del sentir humano.
             </p>
         </div>
@@ -105,8 +108,8 @@
                     <div class="carousel-item active">
                         <img src="../public/img/car6.png" class="d-block w-100" alt="taller-schumann-hall">
                         <div class="carousel-caption d-none d-md-block caption-foto-car">
-                            <h5>Hall del taller</h5>
-                            <p>Nuestro hall de entrada recientemente refaccionado.</p>
+                            <h5>Recepción</h5>
+                            <p>Nuestro hall de entrada.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
