--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -81,7 +81,10 @@
             </div>
             <div class="texto-info m-5">
                 <p>
-                    El Taller se enorgullece en estar equipado con todo lo necesario para que desarrolles tu aprendizaje con lo mejor. Ponemos a disposición todo para que lleves tu conocimiento y destreza musical al siguiente nivel.
+                    El Taller se enorgullece en estar equipado con todo lo necesario para que desarrolles tu aprendizaje con lo mejor.
+                </p>
+                <p>
+                    Ponemos a disposición todo para que lleves tu conocimiento y destreza musical al siguiente nivel.
                 </p>
                 <p>
                     Ofrecemos clases en diferentes modalidades a partir de los 10 años de edad.
