correcciones en el responsive en todas las secciones

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
         <div class="logo-grande">
             <img src="public/img/logo-schu-blanco.png" alt="taller-schumann">
         </div>
+        <div class="logo-chico">
+            <img src="public/img/logo-schu-blanco-mini.png" alt="taller-schumann">
+        </div>
     </main>
 
 
