--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -131,8 +131,8 @@
                         El segundo libro que les recomendamos, se titula "Escuchar, Tocar, Pensar: Propuestas para las clases de lenguaje musical", escrito por Analía Bas. Esta obra aporta un material valioso para la formación docente en música, y docentes noveles que tengan el deseo de modificar las matrices de aprendizaje, de crear contextos alfabetizadores eficaces. Uno de los aspectos más originales de la obra es la propuesta de visitar el canal de YouTube del propio libro como complemento de algunos de sus capítulos, pudiendo escuchar y ver las producciones sonoras logradas por la autora y su grupo de estudiantes.
                     </p>
                 </div>
-                <div class="col-md img-fluid">
-                    <img src="../public/img/libros-reco-miniv2.png" alt="libros-recomendados">
+                <div class="col-md">
+                    <img class="img-fluid" src="../public/img/libros-reco-miniv2-1.png" alt="libros-recomendados">
                 </div>
             </div>
         </div>
